--- a/src/cart/templates/cart/cart_list.html
+++ b/src/cart/templates/cart/cart_list.html
@@ -1,2 +1,54 @@
-{{ count }}
-{{ name }}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script
+  src="https://code.jquery.com/jquery-3.4.0.min.js"
+  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+  crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script>
+            $(document).ready(function(){
+              console.log("working");
+              $.ajax({
+                url: "/api/cart/",
+                method: "GET",
+                success: function(data){
+                  console.log(data)
+                  $.each(data.menu, function(key, value){
+                      var menuKey = key;
+                      var title = value.title;
+                      var price = value.price;
+                      $("#tweet-container").append(
+                          "<div>" +
+                              title +
+                              "<br/>" +
+                              price +
+                              "<hr/>"+
+                              
+                          "</div>"
+                          
+                      )
+                  })
+                },
+                error: function(data){
+                  console.log("error")
+                  console.log(data)
+                }
+              })
+             });
+            </script>
+</head>
+<body>
+
+        <div id='tweet-container'>
+
+        </div>
+
+
+ 
+</html>
