--- a/src/cart/templates/cart/cart_list1.html
+++ b/src/cart/templates/cart/cart_list1.html
@@ -111,13 +111,15 @@
               <td data-th="메뉴">
                 <div class="row">
                   <div class="col-sm-3 hidden-xs">
+                      {% if ele.menu.image %}
                     <img
-                      src="https://t1.daumcdn.net/cfile/tistory/220F883D53D3AAD731"
+                      src="{{ ele.menu.image.url }}"
                       alt="..."
                       width=100
                       height=100
                       class="img-responsive"
                     />
+                    {% endif %}
                   </div>
                   <div class="col-sm-7">
                     <h4 class="nomargin">{{ ele.menu.title }}</h4>
